first attempt at logo

--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -12,7 +12,7 @@
 	<body>
 		
 		<header>
-			<h1>Downtown Mobtown</h1>
+			<img src='/static/images/logo.png' />
 			<span>A live <a href="">Instagram</a> feed from downtown Mobile, Alabama.</span>
 		</header>
 		<div id="imageContainer" class="container">
