center align logo and subtitle

--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -11,12 +11,13 @@
 	</head>
 	<body>
 		
-		<header>
-			<img src='/static/images/logo.png' />
-			<span>A live <a href="">Instagram</a> feed from downtown Mobile, Alabama.</span>
-		</header>
+		
 		<div id="imageContainer" class="container">
-			
+			<header>
+				<img src='/static/images/logo.png' />
+				<div class="clear"></div>
+				<span>A live <a href="">Instagram</a> feed from downtown Mobile, Alabama.</span>
+			</header>
 			{% for image in images %}
 				<div class="image one-third column clickable">
 					<img src='{{image.thumbnailURL}}' />
