--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -19,8 +19,16 @@
 				<span>A live <a href="">Instagram</a> feed from downtown Mobile, Alabama.</span>
 			</header>
 			{% for image in images %}
-				<div class="image one-third column clickable">
-					<img src='{{image.thumbnailURL}}' />
+				<div class="image one-third column">
+					<a href="http://www.instagram.com" target="_blank">
+						<img src='{{image.thumbnailURL}}' />
+					</a>
+					<div>
+						<div></div>
+						<span class="timestamp">01/01/2014 9:00AM</span>
+						<span class="caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse blandit vestibulum nisl, ut pretium lectus luctus nec. Donec eget turpis non elit aliquam placerat eget ut lectus. </span>
+						<a href="http://www.instagram.com" target="_blank">View on Instagram</a>
+					</div>
 				</div>
 			{% endfor %}
 		</div>
