add/style load more button

--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -31,9 +31,15 @@
 					</div>
 				</div>
 			{% endfor %}
+			
+			<div id="buttonWrapper" class="sixteen columns">
+				<button>Show me more!</button>
+			</div>
 		</section>
 		<footer class="container">
 			<span>Made by <a href="http://www.twitter.com/mirthquakes" target="_blank">@mirthquakes</a> </span>
 		</footer>
+		
+		<script type="text-javascript" src="/static/js/app.js"></script>
 	</body>
 </html>
