--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -32,14 +32,31 @@
 				</div>
 			{% endfor %}
 			
+		</section>
+		<div class="container">
 			<div id="buttonWrapper" class="sixteen columns">
 				<button>Show me more!</button>
 			</div>
-		</section>
+		</div>
 		<footer class="container">
 			<span>Made by <a href="http://www.twitter.com/mirthquakes" target="_blank">@mirthquakes</a> </span>
 		</footer>
 		
-		<script type="text-javascript" src="/static/js/app.js"></script>
+		<script id="template_image" type="text/template">
+			<div class="image one-third column">
+				<a href="{{linkURL}}" target="_blank">
+					<img src='{{thumbnailURL}}' />
+				</a>
+				<div>
+					<div></div>
+					<span class="timestamp">{{timeCreated}}</span>
+					<span class="caption">{{captionText}}</span>
+					<a href="{{linkURL}}" target="_blank">View on Instagram</a>
+				</div>
+			</div>
+		</script>
+		<script src="/static/js/mustache.js"></script>
+		<script src="/static/js/jquery.min.js"></script>
+		<script src="/static/js/app.js"></script>
 	</body>
 </html>
