add loading message behavior

--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -36,6 +36,7 @@
 		<div class="container">
 			<div id="buttonWrapper" class="sixteen columns">
 				<button>Show me more!</button>
+				<span id="loading">Loading Images...</span>
 			</div>
 		</div>
 		<footer class="container">
