add google analytics and favicon

--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Downtown Mobtown</title>
+		<link rel="icon" type="image/jpeg" href="/static/images/favicon.ico">
 		<link href="/static/css/base.css" type="text/css" rel="stylesheet" />
 		<link href="/static/css/skeleton.css" type="text/css" rel="stylesheet" />
 		<link href="/static/css/layout.css" type="text/css" rel="stylesheet" />
@@ -61,5 +62,18 @@
 		<script src="/static/js/mustache.js"></script>
 		<script src="/static/js/jquery.min.js"></script>
 		<script src="/static/js/app.js"></script>
+		<script type="text/javascript">
+
+  			var _gaq = _gaq || [];
+  			_gaq.push(['_setAccount', 'UA-48654864-1']);
+  			_gaq.push(['_setDomainName', 'downtownmobtown.com']);
+  			_gaq.push(['_trackPageview']);
+
+  			(function() {
+    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  			})();
+		</script>
 	</body>
 </html>
