use production files in index.html

--- a/wsgi/downtown/templates/index.html
+++ b/wsgi/downtown/templates/index.html
@@ -4,9 +4,12 @@
 		<meta charset="utf-8">
 		<title>Downtown Mobtown</title>
 		<link rel="icon" type="image/jpeg" href="/static/images/favicon.ico">
+<!--
 		<link href="/static/css/base.css" type="text/css" rel="stylesheet" />
 		<link href="/static/css/skeleton.css" type="text/css" rel="stylesheet" />
 		<link href="/static/css/layout.css" type="text/css" rel="stylesheet" />
+-->
+		<link href="/static/css/production/app.min.css" type="text/css" rel="stylesheet" />
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -59,9 +62,12 @@
 			</div>
 		{% endraw %}
 		</script>
+<!--
 		<script src="/static/js/mustache.js"></script>
 		<script src="/static/js/jquery.min.js"></script>
 		<script src="/static/js/app.js"></script>
+-->
+		<script src="/static/js/production/app.min.js"></script>
 		<script type="text/javascript">
 
   			var _gaq = _gaq || [];
